# cooperativelocomotion_SRBMPC

./: .gitignore  CMakeLists.txt  README.md  activation_placeholder.raisim  cmakemake.sh  run_Raisim.sh
driver_scripts/: A1_srb_raisim.cpp
inc/: ContactEst.hpp  LocoWrapper.hpp  MPC_global_params.hpp  MotionPlanner.hpp  OSQP_wrapper.hpp  OtherUtils.hpp  PlanTrajStock.hpp  kalman.hpp  shared_structs.hpp  shared_structs_backup.hpp
lowlevelctrl/MP_and_Con/inc/: ContactEst.hpp  MotionPlanner.hpp
lowlevelctrl/MP_and_Con/src/: ContactEst.cpp  MotionPlanner.cpp
lowlevelctrl/dynamics/: RobotModel.cpp
lowlevelctrl/global_include/: global_loco_opts.h
lowlevelctrl/include/: DataLog.hpp  LocoWrapper.hpp  LowLevelCtrl.hpp  OSQP_wrapper.hpp  VirtualConstraints.hpp  forceUpdate.hpp  kalman.hpp  multi_pc_comm.h  remoteCtrl.h
lowlevelctrl/optimization/iSWIFT/cpp_wrapper/: iswift_qp.cpp  iswift_qp.h
lowlevelctrl/optimization/iSWIFT/src/: Auxilary.c  Prime.c  timer.c
lowlevelctrl/params/: LL_joystick.txt  LL_w_CLF.txt  Parameters.hpp  Walking_joystick.txt  Walking_params.txt
lowlevelctrl/raisimOgre_include/: guiState.hpp  raisimKeyboardCallback.hpp
lowlevelctrl/rsc/A1/: A1_modified_new_ballj_l.urdf  A1_modified_new_ballj_r.urdf
lowlevelctrl/rsc/balljoint/meshes/: balljoint.STL  base_cover.STL  base_link.STL
lowlevelctrl/src/: A1_Sim.cpp  DataLog.cpp  LocoWrapper.cpp  LowLevelCtrl.cpp  VirtualConstraints.cpp  forceUpdate.cpp  kalman.cpp  restoreConfig.cpp
lowlevelctrl/util_include/: EigenUtils.hpp
material_collection/: collection.material
params/: LL_w_CLF.txt  Walking_params.txt
plannerSRBMPC/: README.md
plannerSRBMPC/datalog/: dataplot.m  dataplot_y_u.m  howtouse.md
plannerSRBMPC/dynamics/: README.md
plannerSRBMPC/dynamics/Kinova/: kinovaDynamics.cpp  kinovaDynamics.h  kinovaDynamicsGeneral.cpp  kinovaDynamicsGeneral.h  kinovaDynamics_backup.cpp  kinovaDynamics_backup.h  kinovaKinematics.cpp  kinovaKinematics.h  kinovaKinematicsGeneral.cpp  kinovaKinematicsGeneral.h
plannerSRBMPC/dynamics/Togo/: Dynamics.cpp  Dynamics.h
plannerSRBMPC/dynamics/Togo_manual_measure_model_base/: Dynamics.cpp  Dynamics.h
plannerSRBMPC/include/: math_define.h  parameters.h  srbcoopModel.h
plannerSRBMPC/include/a1_controller/: locomotion_planner.h
plannerSRBMPC/optimization/iSWIFT/cpp_wrapper/: iswift_qp.cpp  iswift_qp.h
plannerSRBMPC/optimization/iSWIFT/include/: GlobalOptions.h  Prime.h  timer.h
plannerSRBMPC/raisimOgre_include/: raisimBasicImguiPanel.hpp
plannerSRBMPC/src/: locomotion_planner.cpp  srbcoopModel_0.004.cpp  srbcoopModel_0.005.cpp
rsc/: A1.xml
src/: ContactEst.cpp  LocoWrapper.cpp  MotionPlanner.cpp  MotionPlanner_backup.cpp  kalman.cpp
